Java: GptUi: show temperature